rgw: adding BUCKET_REWRITE and OBJECT_REWRITE OPS to gc_ops_list to initialize gc and prevent crashes when send_chain() is invoked.

Fixes: https://tracker.ceph.com/issues/54742

Signed-off-by: Pritha Srivastava <prsrivas@redhat.com>