src/rgw/rgw_admin.cc
@@ -4239,7 +4239,9 @@ int main(int argc, const char **argv)
 			 OPT::OBJECTS_EXPIRE_STALE_RM,
 			 OPT::LC_PROCESS,
        OPT::BUCKET_SYNC_RUN,
-       OPT::DATA_SYNC_RUN
+       OPT::DATA_SYNC_RUN,
+       OPT::BUCKET_REWRITE,
+       OPT::OBJECT_REWRITE
     };
 
     raw_storage_op = (raw_storage_ops_list.find(opt_cmd) != raw_storage_ops_list.end() ||
